Bugfix for #80. Load pcars.css after ui.jqgrid.css to be able to overwrite some default values. Like overflow-x: hidden; to hide x-scrollbar.

--- a/css/pcars.css
+++ b/css/pcars.css
@@ -20,6 +20,11 @@
 				border:		1;
 				background:	lightgreen;
 	     }
+	     
+	     .ui-jqgrid .ui-jqgrid-bdiv { 
+			overflow-x: hidden; /*suspress x Scrollbar */
+			 max-height: 80vh; /*defines value relativ to browser window size*/ 
+		}
 
 	     #TrackList{
 				position:       absolute;
@@ -60,10 +65,6 @@
                 left:           55%;
 				top:			250px;
 	     }
-	     /*
-	     .ui-jqgrid-bdiv{
-	     	max-height: 500px;
-	     }*/
 	     #DriverData .ui-jqgrid-bdiv{
 				max-height: 400px;
 				overflow-x: hidden;
@@ -320,13 +321,4 @@ input:checked + .slider:before {
 .JBOXPCARSLV {
 	fill: black;
 	background:green;
-}
-
-.ui-jqgrid .ui-jqgrid-bdiv { overflow-x: hidden; }
-
-.ui-jqgrid-bdiv{
-    max-height: 80vh; /*defines value relativ to browser window size*/
-/*    overflow-y: scroll;*/
-    overflow-x: hidden;
-
 }
